--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,26 @@ nav {
     background: url("../img/landtagswahlen_bg.png") #4db0e1;
     background-position: right;
     background-repeat: no-repeat; }
+  .wrapper.impressum {
+    background: url("../img/impressum_bg.png") #4db0e1;
+    background-position: right;
+    background-repeat: no-repeat; }
+  .wrapper.politik-abc {
+    background: url("../img/politik-abc_bg.png") #4db0e1;
+    background-position: right;
+    background-repeat: no-repeat; }
+  .wrapper.sonntagsfrage {
+    background: url("../img/sonntagsfrage_bg.png") #4db0e1;
+    background-position: right;
+    background-repeat: no-repeat; }
+  .wrapper.warum-waehlen {
+    background: url("../img/warum-waehlen_bg.png") #4db0e1;
+    background-position: right;
+    background-repeat: no-repeat; }
+  .wrapper.parteiprogramme {
+    background: url("../img/parteiprogramme_bg.png") #4db0e1;
+    background-position: right;
+    background-repeat: no-repeat; }
 
 .container-full {
   background: white;
