--- a/scss/main.scss
+++ b/scss/main.scss
@@ -244,6 +244,36 @@ nav {
 		background-position: right;
 		background-repeat: no-repeat;
 	}
+
+	&.impressum {
+		background: url("../img/impressum_bg.png") $primary-color;
+		background-position: right;
+		background-repeat: no-repeat;
+	}
+
+	&.politik-abc {
+		background: url("../img/politik-abc_bg.png") $primary-color;
+		background-position: right;
+		background-repeat: no-repeat;
+	}
+
+	&.sonntagsfrage {
+		background: url("../img/sonntagsfrage_bg.png") $primary-color;
+		background-position: right;
+		background-repeat: no-repeat;
+	}
+
+	&.warum-waehlen {
+		background: url("../img/warum-waehlen_bg.png") $primary-color;
+		background-position: right;
+		background-repeat: no-repeat;
+	}
+
+	&.parteiprogramme {
+		background: url("../img/parteiprogramme_bg.png") $primary-color;
+		background-position: right;
+		background-repeat: no-repeat;
+	}
 }
 
 .container-full {
@@ -539,8 +569,6 @@ header {
 .clearfix {*zoom: 1;}
 
 .ausgabe-flex {
-
-
 
 .diagramm {
 	color: #fff;
