--- a/scss/main.scss
+++ b/scss/main.scss
@@ -182,6 +182,33 @@ nav {
 		border: none;
 		z-index: 9;
 
+		&.close-navigation {
+			position: relative;
+			margin-top: 1.5rem;
+
+			span {
+				display: block;
+				height: .3rem;
+				background-color: white;
+				margin-bottom: .5rem;
+				position: absolute;
+			}
+
+			span:nth-child(1) {
+				width: 3rem;
+				transform: rotate(-45deg);
+			}
+			span:nth-child(2) {
+				width: 2.5rem;
+				opacity: 0;
+			}
+			span:nth-child(3) {
+				width: 3rem;
+				transform: rotate(45deg);
+			}
+
+		}
+
 		@media (min-width: $screen-laptop) {
 			display: none;
 		}
@@ -191,6 +218,7 @@ nav {
 			height: .3rem;
 			background-color: white;
 			margin-bottom: .5rem;
+			transition: all .3s ease;
 		}
 
 		span:nth-child(1) {
