--- a/scss/main.scss
+++ b/scss/main.scss
@@ -342,51 +342,61 @@ main {
 
 	.sonntagsfrage-flex {
 
-		form {
+	form {
 			display: flex;
 			flex-direction: column;
-			justify-content: space-between;
+			justify-content: center;
 			align-items: center;
 			flex-wrap: wrap;
-			//max-width: 100%;
 
 			@media (min-width: $screen-tablet) {
 				flex-direction: row;
 			}
 		}
 
-		img {
-			width: 75%;
-			margin: 1rem auto;
-			display: block;
-		}
-
 		.partei-box {
-			align-self: center;
-			width: 25%;
-			max-width: 30rem;
+			width: 20rem;
+			height: 20rem;
 			background-color: transparent;
-			border: .1rem solid $light-gray;
+			background: #f7f7f7;
 			margin: 1.5rem;
-			border-radius: .2rem;
-			width: 25rem;
+			padding: 2rem;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+
+			div {
+				flex-grow: 2;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+
+				img {
+					max-width: 16rem;
+					max-height: 10rem;
+				}
+			}
 		}
 
-		input[type="radio"] {
-			display: block;
-			margin: 3rem auto 1rem;
+		.partei-radio {
+			display: none;
+		}
+
+		input[type="radio"]:checked + label{
+			border: solid 2px $light-gray;
 		}
 
 		label {
 			text-align: center;
-			padding: 2rem;
-			display: block;
+			font-weight: normal;
 		}
+
+
 
 		.submit {
 			margin: 2rem auto;
 			width: 100%;
-
 		}
 
 	}
