fixes background image

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -271,36 +271,42 @@ nav {
 		background: url("../img/landtagswahlen_bg.png") $primary-color;
 		background-position: right;
 		background-repeat: no-repeat;
+		background-size: auto 100%;
 	}
 
 	&.impressum {
 		background: url("../img/impressum_bg.png") $primary-color;
 		background-position: right;
 		background-repeat: no-repeat;
+		background-size: auto 100%;
 	}
 
 	&.politik-abc {
 		background: url("../img/politik-abc_bg.png") $primary-color;
 		background-position: right;
 		background-repeat: no-repeat;
+		background-size: auto 100%;
 	}
 
 	&.sonntagsfrage {
 		background: url("../img/sonntagsfrage_bg.png") $primary-color;
 		background-position: right;
 		background-repeat: no-repeat;
+		background-size: auto 100%;
 	}
 
 	&.warum-waehlen {
 		background: url("../img/warum-waehlen_bg.png") $primary-color;
 		background-position: right;
 		background-repeat: no-repeat;
+		background-size: auto 100%;
 	}
 
 	&.parteiprogramme {
 		background: url("../img/parteiprogramme_bg.png") $primary-color;
 		background-position: right;
 		background-repeat: no-repeat;
+		background-size: auto 100%;
 	}
 }
 
