--- a/css/main.css
+++ b/css/main.css
@@ -175,27 +175,33 @@ nav {
   .wrapper.landtagswahlen {
     background: url("../img/landtagswahlen_bg.png") #4db0e1;
     background-position: right;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-size: auto 100%; }
   .wrapper.impressum {
     background: url("../img/impressum_bg.png") #4db0e1;
     background-position: right;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-size: auto 100%; }
   .wrapper.politik-abc {
     background: url("../img/politik-abc_bg.png") #4db0e1;
     background-position: right;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-size: auto 100%; }
   .wrapper.sonntagsfrage {
     background: url("../img/sonntagsfrage_bg.png") #4db0e1;
     background-position: right;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-size: auto 100%; }
   .wrapper.warum-waehlen {
     background: url("../img/warum-waehlen_bg.png") #4db0e1;
     background-position: right;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-size: auto 100%; }
   .wrapper.parteiprogramme {
     background: url("../img/parteiprogramme_bg.png") #4db0e1;
     background-position: right;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-size: auto 100%; }
 
 .container-full {
   background: white;
