--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,7 @@ h3 {
         line-height: inherit;
         padding: 2.5rem 0;
         display: flex;
+        -moz-box: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -163,7 +164,8 @@ nav {
     nav .hamburger-nav .current-mobile {
       opacity: 1; }
     nav .hamburger-nav.visible {
-      display: flex; }
+      display: flex;
+      -moz-box: flex; }
 
 .wrapper {
   width: 100vw;
@@ -219,6 +221,7 @@ main {
       padding: 0 10rem; } }
   .main-content .content-flex {
     display: flex;
+    -moz-box: flex;
     flex-direction: column; }
     @media (min-width: 992px) {
       .main-content .content-flex {
@@ -228,6 +231,7 @@ main {
           padding-right: 4rem; } }
   .main-content .sonntagsfrage-flex form {
     display: flex;
+    -moz-box: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -246,6 +250,7 @@ main {
     cursor: pointer; }
     .main-content .sonntagsfrage-flex .partei-box div {
       display: flex;
+      -moz-box: flex;
       flex-direction: column;
       justify-content: center;
       width: 100%;
@@ -338,7 +343,8 @@ header {
         header .header-flex .heading2 {
           order: 3; } }
     header .header-flex svg {
-      width: 50%; }
+      width: 50%;
+      max-width: 30rem; }
       header .header-flex svg .st0, header .header-flex svg .st1, header .header-flex svg .st2 {
         fill: white; }
       @media (min-width: 992px) {
@@ -371,6 +377,7 @@ header {
     list-style: none;
     flex-direction: row;
     display: flex;
+    -moz-box: flex;
     align-items: center; }
     @media (max-width: 768px) {
       .tab-nav ul {
@@ -427,6 +434,7 @@ header {
 
 .ausgabe-flex {
   display: flex;
+  -moz-box: flex;
   flex-direction: column; }
   .ausgabe-flex .diagramm {
     color: #fff;
@@ -462,34 +470,39 @@ header {
   display: flex;
   flex-direction: column;
   padding-bottom: 5rem; }
-  @media (min-width: 992px) {
+  @media (min-width: 1280px) {
     .card-container {
       flex-direction: row; } }
   .card-container .card {
-    flex: 1;
     padding: 2.5rem;
     margin: 1rem 0;
     color: white;
     background-color: #4db0e1; }
-    @media (min-width: 992px) {
+    .card-container .card p:last-child {
+      margin-bottom: 0; }
+    @media (min-width: 1280px) {
       .card-container .card {
-        margin: 0 1rem; }
+        width: 30%;
+        margin: 0 2.5%; }
         .card-container .card:first-child {
           margin-left: 0; }
         .card-container .card:last-child {
           margin-right: 0; } }
-    .card-container .card blockquote {
+    .card-container .card h3 {
       text-transform: uppercase;
       font-family: 'ralewaysemibold', Arial, sans-serif;
       font-size: 2.1rem;
       position: relative;
       border: none;
-      padding-left: 3rem; }
-    .card-container .card blockquote::before {
+      padding-left: 3rem;
+      padding-bottom: 2rem;
+      color: white; }
+    .card-container .card h3::before {
       content: "\201D";
       font-size: 7rem;
       display: block;
       position: absolute;
-      left: 0rem; }
+      top: -3rem;
+      left: 0; }
 
 /*# sourceMappingURL=main.css.map */
